--- a/artifacts.gradle
+++ b/artifacts.gradle
@@ -23,6 +23,7 @@ tasks.withType(Jar) {
 				"Implementation-Vendor": "CrucibleMC Team",
 				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
 				'IsThatYouGrimoire': "Indeed",
+				"ForceLoadAsMod": "true",
 				'FMLCorePluginContainsFMLMod': 'true'
 			])
 		}
