--- a/Grimoire-mc1.7.10/gradle.properties
+++ b/Grimoire-mc1.7.10/gradle.properties
@@ -4,5 +4,5 @@ name=Grimoire-mc1.7.10
 mcVersion=1.7.10
 isGrimoireItself=true
 mixinRefmapName=grimoire.refmap.json
-mixinRepackFile=libs/mixin-0.7.11-SNAPSHOT-REPACK.jar
-mixinRepackFileSources=libs/mixin-0.7.11-SNAPSHOT-REPACK-sources.jar
+mixinRepackFile=libs/mixin-0.8.4.jar
+mixinRepackFileSources=libs/mixin-0.8.4-sources.jar
